# atmospherics-tools

./: .gitignore  CMakeLists.txt  README.md  setup.sh
app/: CMakeLists.txt  split_channels.cxx  weightor.cxx
src/: CMakeLists.txt  Calculator.cxx  Calculator.h  Data.h  DirWriter.cxx  DirWriter.h  Flux.cxx  Flux.h  FluxManager.cxx  FluxManager.h  LinkDef.h  Reader.cxx  Reader.h  Writer.cxx  Writer.h
